# ros-asv

./: README.md
asv/: CMakeLists.txt  package.xml
asv_bringup/: CMakeLists.txt  package.xml
asv_bringup/launch/: bringup.launch  minimal.launch
asv_bringup/launch/include/: awa1.launch  awa2.launch  awa3.launch  boat1.launch  boat2.launch  boat3.launch  jetson2.launch  quality.launch  quality1.launch  quality2.launch  quality3.launch  sampler.launch  vision.launch
asv_bringup/launch/include/boat2/: description.launch  logger.launch  monitors.launch  peripherals.launch
asv_bringup/launch/include/quality/: atlas.launch  monitors.launch
asv_bringup/launch/vehicles/boat2/: description.launch  logger.launch  mavros.launch  monitors.launch  sonar.launch
asv_control/: CMakeLists.txt  package.xml
asv_control/scripts/: peripherals.py
asv_description/: CMakeLists.txt  package.xml
asv_description/diag/: boat1.yaml  boat2.yaml  boat3.yaml  vehicle.yaml
asv_description/launch/: asv.launch
asv_description/param/: boat2.yaml  boat3.yaml  vehicle.yaml
setup/: configure  hosts  install  update_modules.py
setup/systemd/bringup/: bringup.service  bringup.sh  environment
setup/systemd/sonar/: sonar.service  startup_launch_ros_sonar.sh
setup/udev/: 10-peripherals.rules
