<?xml version="1.0"?>
<package format="2">
  <name>asv</name>
  <version>0.0.0</version>
  <description>The asv package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="renan@todo.todo">renan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>asv_bringup</exec_depend>
  <exec_depend>asv_control</exec_depend>
  <exec_depend>asv_description</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
